Se habilita racview en Siges por problemas de token con RAC